2012-05-02  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed morning gardening.

        * platform/qt-5.0/Skipped:
        * platform/qt-5.0/fast/forms/search-rtl-expected.png: Added.
        * platform/qt-5.0/fast/forms/search-rtl-expected.txt:
        * platform/qt/Skipped:

2012-05-02  Andrey Kosyakov  <caseq@chromium.org>

        Unreviewed gardening. Adjusted expectations for slow tests.

        * platform/chromium/test_expectations.txt:

2012-05-02  Andrey Kosyakov  <caseq@chromium.org>

        Unreviewed. Removed entry for fast/dom/prototype-inheritance-2.html to keep lint happy.

        * platform/chromium/test_expectations.txt:

2012-05-02  Erik Arvidsson  <arv@chromium.org>

        Remove window-properties.html and other iterate over all possible properties tests
        https://bugs.webkit.org/show_bug.cgi?id=85430

        Reviewed by Eric Seidel.

        These tests iterate over all properties in the global scope and their respective properties.
        These tests are different on all platforms because they depend on build flags.
        Each feature should be covered by a more specific test than a global catch all that breaks
        every time anyone touches any IDL file.

        * fast/dom/Window/window-properties-expected.txt: Removed.
        * fast/dom/Window/window-properties.html: Removed.
        * fast/dom/prototype-inheritance-2-expected.txt: Removed.
        * fast/dom/prototype-inheritance-2.html: Removed.
        * fast/dom/prototype-inheritance-expected.txt: Removed.
        * fast/dom/prototype-inheritance.html: Removed.
        * fast/dom/script-tests/prototype-inheritance-2.js: Removed.
        * fast/dom/script-tests/prototype-inheritance.js: Removed.
        * platform/chromium-win/fast/dom/Window/window-properties-expected.txt: Removed.
        * platform/chromium-win/fast/dom/prototype-inheritance-2-expected.txt: Removed.
        * platform/chromium/fast/dom/prototype-inheritance-expected.txt: Removed.